viewport-fixes
marjor: fixed desktop/tablet/mobile views

minor: fixed all pages extra spacings (overflow-x)

--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,8 @@ article .icon {
 }
 
 .project-containers {
+  display: flex;
+  flex-direction: row;
   gap: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
